<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">RoundUp</string>
    <string name="title_activity_splash_screen">Splash Screen</string>
    <string name="description">Description<xliff:g example="Bowling" id="write">%s</xliff:g></string>
    <string name="highlight">Select the possible days you would like to have the event on</string>
    <string name="unique_code"></string>
    <string name="no_back">Please highlight the days you are available to meet</string>
    <string name="time_range">Time Range</string>
    <string name="start_hour">Starting Hour: </string>
    <string name="end_hour">Ending Hour: </string>
    <string name="example_hour">8</string>
    <string name="update">Update</string>
    <string name="numberSelectedDays"></string>
    <string name="update_list"></string>
    <string name="approximate_length">1 hour, 2-3 hours, etc.</string>

    <!--For MainActivity-->
    <string name="create_roundup">Create RoundUp</string>
    <string name="join_roundup">Join RoundUp</string>
    <string name="results">Results</string>
    <string name="help">Help</string>

    <!--For CreateEvent-->
    <string name="name_event">Name of Event</string>
    <string name="description_event">Event Description (activity, place, etc.)</string>
    <string name="roundup_button">RoundUp!!</string>
    <string name="error_name">Enter an event name to continue</string>
    <string name="error_description">Enter an event description to continue</string>
    <string name="error_name_and_description">Enter an event name and description to continue</string>

    <!--For CodeCreate Start Hour Spinner-->
    <string-array name="hour_first">
        <item>12</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>

    <!--For CodeCreate End Hour Spinner-->
    <string-array name="hour_second">
        <item>12</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>

    <!--For CodeCreate First Time of Day Spinner-->
    <string-array name="time_of_day_first">
        <item>AM</item>
        <item>PM</item>
    </string-array>

    <!--For CodeCreate Second Time of Day Spinner-->
    <string-array name="time_of_day_second">
        <item>PM</item>
        <item>AM</item>
    </string-array>

    <!--For CodeCreate Time Interval Spinner-->
    <string-array name="time_intervals">
        <item>30 min</item>
        <item>60 min</item>
    </string-array>
    <string name="title_activity_user_input_data">UserInputData</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--For UserInputData hours list-->
    <string name="picked">Hours chosen:<xliff:g example="1,2" id="write">%d</xliff:g></string>

</resources>

