<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/highlight"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/write"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/description"
            android:textAllCaps="true"
            android:layout_marginTop="16dp"/>

        <GridView
            android:id="@+id/calendar"
            android:numColumns="7"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:gravity="center"
            android:verticalSpacing="10dp"
            tools:context="com.example.android.roundupv4.CalendarScreen">
        </GridView>

        <!--<CalendarView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="horizontal"
            android:isScrollContainer="true">
        </CalendarView> -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/time_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_range"
                android:textSize="20sp"
                android:layout_gravity="center"/>

            <LinearLayout
                android:id="@+id/start_and_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/start_hour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/start_hour"
                            android:textSize="16sp"
                            android:layout_gravity="center" />

                        <Spinner
                            android:id="@+id/spinner_hour1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:entries="@array/hour_first"/>

                        <Spinner
                            android:id="@+id/spinner_time1"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:entries="@array/time_of_day_first">
                        </Spinner>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/spinner_hours"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/end_hour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/end_hour"
                            android:textSize="16sp"
                            android:gravity="center" />

                        <Spinner
                            android:id="@+id/spinner_hour2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:entries="@array/hour_second" />

                        <Spinner
                            android:id="@+id/spinner_time2"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:entries="@array/time_of_day_second"/>

                    </LinearLayout>

                </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/num_selected_days"
            android:text="@string/numberSelectedDays"
            android:gravity="center"
            android:paddingTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selected_days"
            android:gravity="center"
            android:text="@string/update_list"/>

        <TextView
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/unique_code"
            android:paddingTop="10dp"/>

        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/update"
            android:layout_gravity="center"/>

    </LinearLayout>

</ScrollView>