<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/highlight"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/write"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/description"
            android:textAllCaps="true"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="Su"
                android:id="@+id/Sun"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="Mo"
                android:id="@+id/Mon"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="Tu"
                android:id="@+id/Tue"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="We"
                android:id="@+id/Wed"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="Th"
                android:id="@+id/Thu"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="Fr"
                android:id="@+id/Fri"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="Sa"
                android:id="@+id/Sat"/>

        </LinearLayout>

        <GridView
            android:id="@+id/calendar"
            android:numColumns="7"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:gravity="center"
            android:verticalSpacing="10dp"
            tools:context="com.example">

        </GridView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/num_selected_days"
            android:text="@string/numberSelectedDays"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selected_days"
            android:gravity="center"
            android:text="@string/update_list"/>

        <TextView
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/unique_code"/>

        <Button
            android:text="Arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nextButton4" />

        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/update"
            android:layout_gravity="center"/>

    </LinearLayout>

</ScrollView>
