<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_code_create"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context="com.example.vikasperaka.roundupv4.CodeCreate">

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/codeDisplay"
        android:layout_marginTop="20dp"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(Click on the code to copy it to your clipboard)"
        android:layout_gravity="center"
        android:paddingBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Options:"
        android:textSize="25sp"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/time_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_range"
        android:textSize="20sp"
        android:layout_gravity="left"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/start_and_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_hour"
                    android:textSize="16sp"
                    android:layout_gravity="center" />

                <Spinner
                    android:id="@+id/spinner_hour1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/hour_first"/>

                <Spinner
                    android:id="@+id/spinner_time1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/time_of_day_first">
                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/spinner_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_hour"
                    android:textSize="16sp"
                    android:gravity="center" />

                <Spinner
                    android:id="@+id/spinner_hour2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/hour_second"
                    android:layout_marginLeft="6.5dp"/>

                <Spinner
                    android:id="@+id/spinner_time2"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:entries="@array/time_of_day_second"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Time Increment"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Intervals:"
            android:textSize="16sp"
            android:gravity="center" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/time_intervals"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Duration of Event"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Approximately:"
            android:textSize="16sp"
            android:gravity="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/approximate_length"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_hour" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/end_hour"/>

    <Button
        android:text="Join Event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/join" />
</LinearLayout>
